# static-web

./: .gitignore  README.md
src/: html_lexer.c  html_lexer.h  html_parser.c  html_parser.h  html_tokenizer.c  html_tokenizer.h  meson.build  unicode.c  unicode.h  web-cc.c  web_cc.c
